Update links to slides

--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -10,7 +10,7 @@
     "tags": []
    },
    "source": [
-    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html)\n",
+    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefaniemolin.com/pandas-workshop/)\n",
     "\n",
     "---\n",
     "\n",
