--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -10,7 +10,7 @@
     "tags": []
    },
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab/tree/notebooks/3-data_visualization.ipynb) [![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/section-3)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab/tree/notebooks/3-data_visualization.ipynb) [![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefaniemolin.com/pandas-workshop/#/section-3)\n",
     "\n",
     "---\n",
     "\n",
@@ -12335,7 +12335,7 @@
    "outputs": [],
    "source": [
     "# TIP: the solution to Exercise 3.1 can be found at\n",
-    "# https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/solution-3-1"
+    "# https://stefaniemolin.com/pandas-workshop/#/solution-3-1"
    ]
   },
   {
