Update links for new website

--- a/slides/5-outro.ipynb
+++ b/slides/5-outro.ipynb
@@ -21,31 +21,31 @@
     "        <img class=\"qr-code\" width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\">\n",
     "    </div>\n",
     "\n",
-    "<div style=\"flex-basis: 45em; flex-grow: 2; font-size: 80%;\">\n",
-    "    <p>\n",
-    "        <i class=\"fab fa-github-square fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
-    "      <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://github.com/stefmolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
-    "        github.com/stefmolin\n",
+    "  <div style=\"flex-basis: 45em; flex-grow: 2; font-size: 80%;\">\n",
+    "    <div style=\"display: flex; justify-content: flex-start; align-items: center;\">\n",
+    "      <i class=\"fa fa-globe fa-2x fa-fw\" style=\"padding-right: 4px\"></i>\n",
+    "      <a href=\"https://stefaniemolin.com\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\">\n",
+    "        stefaniemolin.com\n",
     "      </a>\n",
-    "    </p>\n",
-    "    <p>\n",
-    "        <i class=\"fab fa-twitter-square fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
-    "        <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://twitter.com/StefanieMolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
-    "        twitter.com/StefanieMolin                      \n",
-    "        </a>\n",
-    "    </p>\n",
-    "    <p>\n",
-    "        <i class=\"fab fa-medium fa-2x\" style=\"position: relative; top: 3px;\"></i>\n",
-    "      <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://medium.com/@stefaniemolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
-    "         medium.com/@stefaniemolin                   \n",
-    "      </a>\n",
-    "    </p>\n",
-    "    <p>\n",
-    "        <i class=\"fab fa-linkedin fa-2x\" style=\"position: relative; top: 1px;\"></i>\n",
-    "        <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://linkedin.com/in/stefanie-molin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
-    "         linkedin.com/in/stefanie-molin\n",
-    "        </a>\n",
-    "    </p>\n",
+    "    </div>\n",
+    "  <div style=\"display: flex; justify-content: flex-start; align-items: center;\">\n",
+    "    <i class=\"fab fa-github fa-2x fa-fw\" style=\"padding-right: 4px\"></i>\n",
+    "    <a href=\"https://github.com/stefmolin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
+    "      github.com/stefmolin\n",
+    "    </a>\n",
+    "  </div>\n",
+    "  <div style=\"display: flex; justify-content: flex-start; align-items: center;\">\n",
+    "    <i class=\"fab fa-twitter fa-2x fa-fw\" style=\"padding-right: 4px\"></i>\n",
+    "    <a href=\"https://twitter.com/StefanieMolin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
+    "      twitter.com/StefanieMolin\n",
+    "    </a>\n",
+    "  </div>\n",
+    "  <div style=\"display: flex; justify-content: flex-start; align-items: center;\">\n",
+    "    <i class=\"fab fa-linkedin-in fa-2x fa-fw\" style=\"padding-right: 4px\"></i>\n",
+    "    <a href=\"https://linkedin.com/in/stefanie-molin\" rel=\"noopener noreferrer\" style=\"font-size: 2em;\" target=\"_blank\">\n",
+    "      linkedin.com/in/stefanie-molin\n",
+    "    </a>\n",
+    "  </div>\n",
     "</div>\n",
     "</div>"
    ]
