--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -84,7 +84,7 @@
     "<div style=\"text-align: center;\">\n",
     "    <img width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG\" style=\"min-width: 200px\">\n",
     "    <div><small>\n",
-    "        <a href=\"https://linktr.ee/stefaniemolin\">linktr.ee/stefaniemolin</a>\n",
+    "        <a href=\"https://stefaniemolin.com\">stefaniemolin.com</a>\n",
     "    </small></div>\n",
     "</div>"
    ]
