Update <head> tags

--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -219,7 +219,7 @@
     "import pandas as pd\n",
     "\n",
     "tsa_melted_holiday_travel = pd.read_csv(\n",
-    "    '../data/tsa_melted_holiday_travel.csv', \n",
+    "    '../data/tsa_melted_holiday_travel.csv',\n",
     "    parse_dates=True, index_col='date'\n",
     ")\n",
     "tsa_melted_holiday_travel.head()"
@@ -5396,7 +5396,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: If you're new to the `zip()` function, check out [this](https://realpython.com/python-zip-function/) article.*"
+    "*Tip: If you're new to the `zip()` function, check out [this article](https://realpython.com/python-zip-function/).*"
    ]
   },
   {
@@ -16390,11 +16390,11 @@
     "    for tick_label in ax.get_xticklabels():\n",
     "        median = medians[int(tick_label.get_text())]\n",
     "        ax.annotate(\n",
-    "            f'{median / 1e6:.1f} M', \n",
-    "            xy=(tick_label.get_position()[0], median), \n",
+    "            f'{median / 1e6:.1f} M',\n",
+    "            xy=(tick_label.get_position()[0], median),\n",
     "            ha='center', va='bottom'\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    return ax"
    ]
   },
