--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -174,7 +174,7 @@
     "import pandas as pd\n",
     "\n",
     "tsa_melted_holiday_travel = pd.read_csv(\n",
-    "    '../data/tsa_melted_holiday_travel.csv', \n",
+    "    '../data/tsa_melted_holiday_travel.csv',\n",
     "    parse_dates=True, index_col='date'\n",
     ")\n",
     "tsa_melted_holiday_travel.head()"
@@ -5341,7 +5341,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: If you're new to the `zip()` function, check out [this](https://realpython.com/python-zip-function/) article.*"
+    "*Tip: If you're new to the `zip()` function, check out [this article](https://realpython.com/python-zip-function/).*"
    ]
   },
   {
