--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -48,11 +48,11 @@
    "source": [
     "## Bio\n",
     "\n",
-    "- Software engineer and data scientist at Bloomberg in New York City\n",
-    "- Working in information security\n",
-    "- Author of [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (currently in its second edition; translated into Korean)\n",
-    "- BS in operations research from Columbia University\n",
-    "- MS in computer science (ML specialization) from Georgia Tech"
+    "- 👩‍💻 Software engineer at Bloomberg in NYC\n",
+    "- 🚀 Core developer of [numpydoc](https://github.com/numpy/numpydoc)\n",
+    "- ✍️ Author of [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (currently in its second edition; translated into Korean and Simplified Chinese)\n",
+    "- 🎓 BS in operations research from Columbia University\n",
+    "- 🎓 MS in computer science (ML specialization) from Georgia Tech"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
