Rerun remaining sections

--- a/slides/5-outro.ipynb
+++ b/slides/5-outro.ipynb
@@ -2,6 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d8eb612f-36d3-4935-ac0d-fb22911881d4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": [
+     "id_related-content"
+    ]
+   },
+   "source": [
+    "# Related content\n",
+    "\n",
+    "*All examples herein were developed exclusively for this workshop &ndash; check out [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) and my [Beyond the Basics: Data Visualization in Python](https://stefaniemolin.com/workshops/python-data-viz-workshop/) workshop for more.*\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG\" style=\"min-width: 200px\">\n",
+    "    <div><small>\n",
+    "        <a href=\"https://stefaniemolin.com\">stefaniemolin.com</a>\n",
+    "    </small></div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cd8d474a-0d3a-4387-b726-dea2df655ce1",
    "metadata": {
     "slideshow": {
@@ -67,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
