--- a/asynchronous_lab/asynchronous_lab.ipynb
+++ b/asynchronous_lab/asynchronous_lab.ipynb
@@ -260,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
