--- a/notebooks/4-hands_on_data_analysis_lab.ipynb
+++ b/notebooks/4-hands_on_data_analysis_lab.ipynb
@@ -40,7 +40,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
