Tweak section 3 for css changes

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -229,14 +229,145 @@
    "source": [
     "### Line plots\n",
     "\n",
-    "The `plot()` method will generate line plots for all numeric columns by default:"
+    "Let's continue with the example of rolling and expanding calculations:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "2e6fc032-939f-4e3a-8cb7-ee57718f0c46",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>travelers</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>7D MA</th>\n",
+       "      <th>YTD mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01</th>\n",
+       "      <td>2311732.0</td>\n",
+       "      <td>New Year's Day</td>\n",
+       "      <td>2311732.0</td>\n",
+       "      <td>2311732.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>2178656.0</td>\n",
+       "      <td>New Year's Day</td>\n",
+       "      <td>2245194.0</td>\n",
+       "      <td>2245194.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>2422272.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2304220.0</td>\n",
+       "      <td>2304220.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-04</th>\n",
+       "      <td>2210542.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2280800.5</td>\n",
+       "      <td>2280800.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-05</th>\n",
+       "      <td>1806480.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2185936.4</td>\n",
+       "      <td>2185936.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            travelers         holiday      7D MA   YTD mean\n",
+       "date                                                       \n",
+       "2020-01-01  2311732.0  New Year's Day  2311732.0  2311732.0\n",
+       "2020-01-02  2178656.0  New Year's Day  2245194.0  2245194.0\n",
+       "2020-01-03  2422272.0             NaN  2304220.0  2304220.0\n",
+       "2020-01-04  2210542.0             NaN  2280800.5  2280800.5\n",
+       "2020-01-05  1806480.0             NaN  2185936.4  2185936.4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot_data = tsa_melted_holiday_travel.drop(columns='year').loc['2020'].assign(\n",
+    "    **{\n",
+    "        '7D MA': lambda x: x.travelers.rolling('7D').mean(),\n",
+    "        'YTD mean': lambda x: x.travelers.expanding().mean()\n",
+    "      }\n",
+    ")\n",
+    "plot_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "616bc44c-4c63-4d9a-9558-8f4de0b5b3e0",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "The `plot()` method will generate line plots for all numeric columns by default:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "7d30f224-a4c3-4083-981e-a3340f4a26b0",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -244,7 +375,7 @@
        "<Axes: title={'center': '2020 TSA Traveler Throughput'}, xlabel='date', ylabel='travelers'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2135,12 +2266,7 @@
     }
    ],
    "source": [
-    "tsa_melted_holiday_travel.drop(columns='year').loc['2020'].assign(\n",
-    "    **{\n",
-    "        '7D MA': lambda x: x.travelers.rolling('7D').mean(),\n",
-    "        'YTD mean': lambda x: x.travelers.expanding().mean()\n",
-    "      }\n",
-    ").plot(title='2020 TSA Traveler Throughput', ylabel='travelers', alpha=0.8)"
+    "plot_data.plot(title='2020 TSA Traveler Throughput', ylabel='travelers', alpha=0.8)"
    ]
   },
   {
@@ -2173,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "babbc6d8-fff4-4505-ad88-8af332416208",
    "metadata": {},
    "outputs": [
@@ -2254,7 +2380,7 @@
        "5      74617773.0   7244733.0         NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2281,17 +2407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d1776fcf-d50f-44b1-8b11-26675347fec5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x117d8a960>"
+       "<matplotlib.legend.Legend at 0x12a5c6de0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3735,7 +3861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5f2d78a2-ced4-48c2-b40c-993d72833828",
    "metadata": {},
    "outputs": [],
@@ -3758,7 +3884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "604d6112-2b33-403d-9383-982ab81e667c",
    "metadata": {},
    "outputs": [
@@ -5335,8 +5461,9 @@
    "cell_type": "markdown",
    "id": "b3baba7d-e807-4e33-9ccb-f21e62af9c1a",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -5356,7 +5483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "243f8298-be40-4d6a-a4be-06abb85b0fa6",
    "metadata": {},
    "outputs": [],
@@ -5366,7 +5493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7df8b0db-bda6-4a7f-bc63-18fa2a0304f2",
    "metadata": {},
    "outputs": [],
@@ -5376,7 +5503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4bfc7ad9-ae6d-440e-b15f-eb3fa16d47ed",
    "metadata": {},
    "outputs": [],
@@ -5417,17 +5544,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b68a741f-9c37-4925-84b9-615c34ea0297",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x117e20980>"
+       "<seaborn.axisgrid.FacetGrid at 0x13f0592b0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6850,7 +6977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "46eafd2b-ffef-4aec-9a88-05342ac3fff6",
    "metadata": {},
    "outputs": [
@@ -6980,7 +7107,7 @@
        "12     70219363.0  26391765.0         NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6995,7 +7122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "efccdcd6-2a4f-4c20-856c-9b996da95935",
    "metadata": {
     "slideshow": {
@@ -8876,7 +9003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e3379920-013d-4df5-9abc-b321060a6891",
    "metadata": {},
    "outputs": [],
@@ -8886,7 +9013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0ec9abff-224b-49cb-ac0c-bd6955b5dcaf",
    "metadata": {},
    "outputs": [],
@@ -8896,7 +9023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6d410276-25aa-4c16-9987-4e17930ebced",
    "metadata": {},
    "outputs": [],
@@ -8937,7 +9064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "681a84a7-6b72-4db8-bfd2-994f98b6494c",
    "metadata": {},
    "outputs": [
@@ -10357,7 +10484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "cd8a781f-3a17-445f-8ff2-742086122b67",
    "metadata": {},
    "outputs": [
@@ -12309,7 +12436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "583f952c-2c2e-40ed-9235-fd80a7fe43b7",
    "metadata": {},
    "outputs": [],
@@ -12319,7 +12446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "0b182f1a-33b0-4dde-9d54-e55d7bfeeae3",
    "metadata": {},
    "outputs": [],
@@ -12329,7 +12456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "07394de8-c5fa-4c90-ac5c-e5b6452838c7",
    "metadata": {},
    "outputs": [],
