--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -61,6 +61,7 @@
    "cell_type": "markdown",
    "id": "c9f34c93-4ca5-4893-b02a-ba1844432576",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -81,6 +82,7 @@
    "cell_type": "markdown",
    "id": "bed5ec02-0cbf-4378-bb63-33e0d4e2eb30",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -99,6 +101,7 @@
    "cell_type": "markdown",
    "id": "1e8fa056-2863-4442-9c39-533352b6240e",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -116,6 +119,7 @@
    "cell_type": "markdown",
    "id": "4d76e200-28d8-417b-bce7-bd4713a30f0a",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -130,6 +134,10 @@
    "execution_count": 1,
    "id": "154aa658-0a4f-4eaa-8f86-c47a4a687633",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [
@@ -229,6 +237,7 @@
    "cell_type": "markdown",
    "id": "f4f708b4-7d14-4d6b-9c37-a2dd71998307",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -242,7 +251,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3addc447-062a-48b8-b1d6-f85ca9565f8f",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import matplotlib_inline\n",
@@ -257,7 +272,13 @@
   {
    "cell_type": "markdown",
    "id": "46cc6aa3-92f0-4d29-953f-5cfe0f55efab",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "*Note: The second argument is optional and is used here to make the SVG output reproducible by setting the `hashsalt` along with some metadata, which will be used by Matplotlib when generating any SVG output (see the `utils.py` file for more details). Without this argument, different runs of the same plotting code will generate plots that are visually identical, but differ at the HTML level due to different IDs, metadata, etc.*"
    ]
@@ -266,6 +287,7 @@
    "cell_type": "markdown",
    "id": "02bf0fd6-d328-4266-b082-7a9f29507030",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -276,12 +298,137 @@
    "source": [
     "### Line plots\n",
     "\n",
-    "The `plot()` method will generate line plots for all numeric columns by default:"
+    "Let's continue with the example of rolling and expanding calculations:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "08a8d3b5-ac5a-438b-9fbe-5bd6c27ec526",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>travelers</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>7D MA</th>\n",
+       "      <th>YTD mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01</th>\n",
+       "      <td>2311732.0</td>\n",
+       "      <td>New Year's Day</td>\n",
+       "      <td>2311732.0</td>\n",
+       "      <td>2311732.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>2178656.0</td>\n",
+       "      <td>New Year's Day</td>\n",
+       "      <td>2245194.0</td>\n",
+       "      <td>2245194.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>2422272.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2304220.0</td>\n",
+       "      <td>2304220.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-04</th>\n",
+       "      <td>2210542.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2280800.5</td>\n",
+       "      <td>2280800.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-05</th>\n",
+       "      <td>1806480.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2185936.4</td>\n",
+       "      <td>2185936.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            travelers         holiday      7D MA   YTD mean\n",
+       "date                                                       \n",
+       "2020-01-01  2311732.0  New Year's Day  2311732.0  2311732.0\n",
+       "2020-01-02  2178656.0  New Year's Day  2245194.0  2245194.0\n",
+       "2020-01-03  2422272.0             NaN  2304220.0  2304220.0\n",
+       "2020-01-04  2210542.0             NaN  2280800.5  2280800.5\n",
+       "2020-01-05  1806480.0             NaN  2185936.4  2185936.4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot_data = tsa_melted_holiday_travel.drop(columns='year').loc['2020'].assign(\n",
+    "    **{\n",
+    "        '7D MA': lambda x: x.travelers.rolling('7D').mean(),\n",
+    "        'YTD mean': lambda x: x.travelers.expanding().mean()\n",
+    "      }\n",
+    ")\n",
+    "plot_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d371030-9926-4063-bc8e-e2b38f4c8541",
+   "metadata": {
+    "editable": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "The `plot()` method will generate line plots for all numeric columns by default:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "729c9323-a128-46c6-a8b0-2f652ec5e02c",
    "metadata": {},
    "outputs": [
@@ -291,7 +438,7 @@
        "<Axes: title={'center': '2020 TSA Traveler Throughput'}, xlabel='date', ylabel='travelers'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2182,12 +2329,9 @@
     }
    ],
    "source": [
-    "tsa_melted_holiday_travel.drop(columns='year').loc['2020'].assign(\n",
-    "    **{\n",
-    "        '7D MA': lambda x: x.travelers.rolling('7D').mean(),\n",
-    "        'YTD mean': lambda x: x.travelers.expanding().mean()\n",
-    "      }\n",
-    ").plot(title='2020 TSA Traveler Throughput', ylabel='travelers', alpha=0.8)"
+    "plot_data.plot(\n",
+    "    title='2020 TSA Traveler Throughput', ylabel='travelers', alpha=0.8\n",
+    ")"
    ]
   },
   {
@@ -2222,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6b4b550f-3bcc-45cf-a35f-000db7cf31bb",
    "metadata": {},
    "outputs": [
@@ -2303,7 +2447,7 @@
        "5      74617773.0   7244733.0         NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2332,17 +2476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "67a1f840-1935-4dae-89ca-35d55ccb2d3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12858b440>"
+       "<matplotlib.legend.Legend at 0x103e10770>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3788,7 +3932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "caee65fb-01d9-47ad-b486-e96cb2995bd2",
    "metadata": {},
    "outputs": [],
@@ -3813,7 +3957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f43dcd68-a39a-4cca-add5-8d89f83f9921",
    "metadata": {},
    "outputs": [
@@ -5390,8 +5534,9 @@
    "cell_type": "markdown",
    "id": "6f9d2369-9c36-4834-aee9-ddb61f3413be",
    "metadata": {
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -5446,7 +5591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b69f5951-a6b1-4f14-b6aa-a025e159deb7",
    "metadata": {},
    "outputs": [],
@@ -5470,7 +5615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ae2251ce-6a5c-4bce-b62a-795712840c1e",
    "metadata": {},
    "outputs": [],
@@ -5499,7 +5644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "939a3b91-652e-4653-93ea-326bf1bbd1b1",
    "metadata": {
     "tags": []
@@ -5511,7 +5656,7 @@
        "<Axes: title={'center': 'TSA Traveler Throughput'}, xlabel='year', ylabel='travelers'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6597,17 +6742,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "12d29c5f-aba9-458e-92aa-1e399c4ef719",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x14d9bab10>"
+       "<seaborn.axisgrid.FacetGrid at 0x13f538560>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -8032,7 +8177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2c62ab83-8474-44d8-adc7-02eeb277ad71",
    "metadata": {},
    "outputs": [
@@ -8162,7 +8307,7 @@
        "12     70219363.0  26391765.0         NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8177,7 +8322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "81424c63-a69f-472e-8266-374c4e449528",
    "metadata": {
     "slideshow": {
@@ -10093,7 +10238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "01bd0785-980f-4c6e-b174-71884010d2fe",
    "metadata": {},
    "outputs": [],
@@ -10120,7 +10265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "82672758-975f-4b76-82a5-1a4a323bbb17",
    "metadata": {},
    "outputs": [],
@@ -10159,7 +10304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9667ee49-e475-464d-86ad-55d10ec9018b",
    "metadata": {},
    "outputs": [
@@ -10169,7 +10314,7 @@
        "<Axes: title={'center': '2019 TSA Median Traveler Throughput\\n(in millions)'}, xlabel='month', ylabel='day_of_week'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -12935,7 +13080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "63853309-4eb8-4de7-889b-4c4cc5ea33e0",
    "metadata": {},
    "outputs": [
@@ -14357,7 +14502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "018c1147-dfc3-49b1-a579-07850db539ef",
    "metadata": {},
    "outputs": [
@@ -16344,7 +16489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "bc5dbd63-4182-4c18-b94c-17bc8c8cd81a",
    "metadata": {},
    "outputs": [],
@@ -16377,7 +16522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "a28c948e-a69c-4cbc-b7ea-99ebda67b1c0",
    "metadata": {},
    "outputs": [],
@@ -16413,7 +16558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "18a749dd-b6a3-417c-a0e9-1a1f7ff5dffe",
    "metadata": {
     "tags": []
@@ -16425,7 +16570,7 @@
        "<Axes: title={'center': 'TSA Traveler Throughput'}, xlabel='year', ylabel='travelers'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
