Fix extra empty cell

--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "cd969b0d-8764-468e-9ab1-0e7aabbdfa1b",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -55,6 +56,7 @@
    "cell_type": "markdown",
    "id": "87f2f8d9-4f35-431a-abcd-a0819e4fc47c",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -64,14 +66,6 @@
     "## Section 4 Complete 🎉\n",
     "<img width=\"30%\" src=\"https://www.pngkey.com/png/detail/246-2469554_panda-anime-png-png-panda.png\" alt=\"Panda Anime Png - Png Panda@pngkey.com\" style=\"min-width: 300px\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a524590-e4fc-45d2-9985-d7ae7d455eba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
