--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -2477,7 +2477,7 @@
     "tags": []
    },
    "source": [
-    "Now, we can work on reshaping it."
+    "Now, we can work on reshaping it into two columns the date and the traveler throughput from 2019 through 2021."
    ]
   },
   {
@@ -2491,7 +2491,7 @@
     "tags": []
    },
    "source": [
-    "Starting with long format data:"
+    "Starting with the long-format data below, we want to **melt** it into wide-format data so that we can look at the evolution of the throughput over time:"
    ]
   },
   {
@@ -2510,76 +2510,55 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_08838_row0_col1, #T_08838_row1_col1, #T_08838_row2_col1, #T_08838_row3_col1, #T_08838_row4_col1 {\n",
+       "#T_15f75_row0_col1, #T_15f75_row1_col1 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_08838_row0_col2, #T_08838_row1_col2, #T_08838_row2_col2, #T_08838_row3_col2, #T_08838_row4_col2 {\n",
+       "#T_15f75_row0_col2, #T_15f75_row1_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_08838_row0_col3, #T_08838_row1_col3, #T_08838_row2_col3, #T_08838_row3_col3, #T_08838_row4_col3 {\n",
+       "#T_15f75_row0_col3, #T_15f75_row1_col3 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
-       "#T_08838_level0_col1 {\n",
+       "#T_15f75_level0_col1 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_08838_level0_col2 {\n",
+       "#T_15f75_level0_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_08838_level0_col3 {\n",
+       "#T_15f75_level0_col3 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_08838\">\n",
+       "<table id=\"T_15f75\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_08838_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
-       "      <th id=\"T_08838_level0_col1\" class=\"col_heading level0 col1\" >2021</th>\n",
-       "      <th id=\"T_08838_level0_col2\" class=\"col_heading level0 col2\" >2020</th>\n",
-       "      <th id=\"T_08838_level0_col3\" class=\"col_heading level0 col3\" >2019</th>\n",
+       "      <th id=\"T_15f75_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
+       "      <th id=\"T_15f75_level0_col1\" class=\"col_heading level0 col1\" >2021</th>\n",
+       "      <th id=\"T_15f75_level0_col2\" class=\"col_heading level0 col2\" >2020</th>\n",
+       "      <th id=\"T_15f75_level0_col3\" class=\"col_heading level0 col3\" >2019</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_08838_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_08838_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
-       "      <td id=\"T_08838_row0_col1\" class=\"data row0 col1\" >1716561.000000</td>\n",
-       "      <td id=\"T_08838_row0_col2\" class=\"data row0 col2\" >250467</td>\n",
-       "      <td id=\"T_08838_row0_col3\" class=\"data row0 col3\" >2664549</td>\n",
+       "      <th id=\"T_15f75_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_15f75_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
+       "      <td id=\"T_15f75_row0_col1\" class=\"data row0 col1\" >1716561.000000</td>\n",
+       "      <td id=\"T_15f75_row0_col2\" class=\"data row0 col2\" >250467</td>\n",
+       "      <td id=\"T_15f75_row0_col3\" class=\"data row0 col3\" >2664549</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_08838_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_08838_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
-       "      <td id=\"T_08838_row1_col1\" class=\"data row1 col1\" >1743515.000000</td>\n",
-       "      <td id=\"T_08838_row1_col2\" class=\"data row1 col2\" >234928</td>\n",
-       "      <td id=\"T_08838_row1_col3\" class=\"data row1 col3\" >2611324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_08838_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_08838_row2_col0\" class=\"data row2 col0\" >2021-05-12 00:00:00</td>\n",
-       "      <td id=\"T_08838_row2_col1\" class=\"data row2 col1\" >1424664.000000</td>\n",
-       "      <td id=\"T_08838_row2_col2\" class=\"data row2 col2\" >176667</td>\n",
-       "      <td id=\"T_08838_row2_col3\" class=\"data row2 col3\" >2343675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_08838_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_08838_row3_col0\" class=\"data row3 col0\" >2021-05-11 00:00:00</td>\n",
-       "      <td id=\"T_08838_row3_col1\" class=\"data row3 col1\" >1315493.000000</td>\n",
-       "      <td id=\"T_08838_row3_col2\" class=\"data row3 col2\" >163205</td>\n",
-       "      <td id=\"T_08838_row3_col3\" class=\"data row3 col3\" >2191387</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_08838_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_08838_row4_col0\" class=\"data row4 col0\" >2021-05-10 00:00:00</td>\n",
-       "      <td id=\"T_08838_row4_col1\" class=\"data row4 col1\" >1657722.000000</td>\n",
-       "      <td id=\"T_08838_row4_col2\" class=\"data row4 col2\" >215645</td>\n",
-       "      <td id=\"T_08838_row4_col3\" class=\"data row4 col3\" >2512315</td>\n",
+       "      <th id=\"T_15f75_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_15f75_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
+       "      <td id=\"T_15f75_row1_col1\" class=\"data row1 col1\" >1743515.000000</td>\n",
+       "      <td id=\"T_15f75_row1_col2\" class=\"data row1 col2\" >234928</td>\n",
+       "      <td id=\"T_15f75_row1_col3\" class=\"data row1 col3\" >2611324</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1546d6960>"
+       "<pandas.io.formats.style.Styler at 0x11a5b8560>"
       ]
      },
      "execution_count": 22,
@@ -2591,7 +2570,7 @@
     "from utils import highlight_long_format\n",
     "\n",
     "colors = {'2021': 'pink', '2020': 'skyblue', '2019': 'lightgreen'}\n",
-    "highlight_long_format(tsa.head(), colors)"
+    "highlight_long_format(tsa.head(2), colors)"
    ]
   },
   {
@@ -2605,7 +2584,7 @@
     "tags": []
    },
    "source": [
-    "We want to transform it into wide format so that we can look at the evolution of the throughput over time:"
+    "Note that the two rows above contain the same data as the six rows below:"
    ]
   },
   {
@@ -2624,61 +2603,67 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_6c3ba_row0_col1, #T_6c3ba_row0_col2, #T_6c3ba_row3_col1, #T_6c3ba_row3_col2 {\n",
+       "#T_22a0d_row0_col1, #T_22a0d_row0_col2, #T_22a0d_row1_col1, #T_22a0d_row1_col2 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_6c3ba_row1_col1, #T_6c3ba_row1_col2, #T_6c3ba_row2_col1, #T_6c3ba_row2_col2 {\n",
+       "#T_22a0d_row2_col1, #T_22a0d_row2_col2, #T_22a0d_row3_col1, #T_22a0d_row3_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_6c3ba_row4_col1, #T_6c3ba_row4_col2 {\n",
+       "#T_22a0d_row4_col1, #T_22a0d_row4_col2, #T_22a0d_row5_col1, #T_22a0d_row5_col2 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_6c3ba\">\n",
+       "<table id=\"T_22a0d\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_6c3ba_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
-       "      <th id=\"T_6c3ba_level0_col1\" class=\"col_heading level0 col1\" >year</th>\n",
-       "      <th id=\"T_6c3ba_level0_col2\" class=\"col_heading level0 col2\" >travelers</th>\n",
+       "      <th id=\"T_22a0d_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
+       "      <th id=\"T_22a0d_level0_col1\" class=\"col_heading level0 col1\" >year</th>\n",
+       "      <th id=\"T_22a0d_level0_col2\" class=\"col_heading level0 col2\" >travelers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c3ba_level0_row0\" class=\"row_heading level0 row0\" >3</th>\n",
-       "      <td id=\"T_6c3ba_row0_col0\" class=\"data row0 col0\" >2021-05-11 00:00:00</td>\n",
-       "      <td id=\"T_6c3ba_row0_col1\" class=\"data row0 col1\" >2021</td>\n",
-       "      <td id=\"T_6c3ba_row0_col2\" class=\"data row0 col2\" >1315493.000000</td>\n",
+       "      <th id=\"T_22a0d_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_22a0d_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
+       "      <td id=\"T_22a0d_row0_col1\" class=\"data row0 col1\" >2021</td>\n",
+       "      <td id=\"T_22a0d_row0_col2\" class=\"data row0 col2\" >1716561.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c3ba_level0_row1\" class=\"row_heading level0 row1\" >7</th>\n",
-       "      <td id=\"T_6c3ba_row1_col0\" class=\"data row1 col0\" >2020-05-12 00:00:00</td>\n",
-       "      <td id=\"T_6c3ba_row1_col1\" class=\"data row1 col1\" >2020</td>\n",
-       "      <td id=\"T_6c3ba_row1_col2\" class=\"data row1 col2\" >176667.000000</td>\n",
+       "      <th id=\"T_22a0d_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_22a0d_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
+       "      <td id=\"T_22a0d_row1_col1\" class=\"data row1 col1\" >2021</td>\n",
+       "      <td id=\"T_22a0d_row1_col2\" class=\"data row1 col2\" >1743515.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c3ba_level0_row2\" class=\"row_heading level0 row2\" >6</th>\n",
-       "      <td id=\"T_6c3ba_row2_col0\" class=\"data row2 col0\" >2020-05-13 00:00:00</td>\n",
-       "      <td id=\"T_6c3ba_row2_col1\" class=\"data row2 col1\" >2020</td>\n",
-       "      <td id=\"T_6c3ba_row2_col2\" class=\"data row2 col2\" >234928.000000</td>\n",
+       "      <th id=\"T_22a0d_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_22a0d_row2_col0\" class=\"data row2 col0\" >2020-05-14 00:00:00</td>\n",
+       "      <td id=\"T_22a0d_row2_col1\" class=\"data row2 col1\" >2020</td>\n",
+       "      <td id=\"T_22a0d_row2_col2\" class=\"data row2 col2\" >250467.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c3ba_level0_row3\" class=\"row_heading level0 row3\" >2</th>\n",
-       "      <td id=\"T_6c3ba_row3_col0\" class=\"data row3 col0\" >2021-05-12 00:00:00</td>\n",
-       "      <td id=\"T_6c3ba_row3_col1\" class=\"data row3 col1\" >2021</td>\n",
-       "      <td id=\"T_6c3ba_row3_col2\" class=\"data row3 col2\" >1424664.000000</td>\n",
+       "      <th id=\"T_22a0d_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_22a0d_row3_col0\" class=\"data row3 col0\" >2020-05-13 00:00:00</td>\n",
+       "      <td id=\"T_22a0d_row3_col1\" class=\"data row3 col1\" >2020</td>\n",
+       "      <td id=\"T_22a0d_row3_col2\" class=\"data row3 col2\" >234928.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6c3ba_level0_row4\" class=\"row_heading level0 row4\" >10</th>\n",
-       "      <td id=\"T_6c3ba_row4_col0\" class=\"data row4 col0\" >2019-05-14 00:00:00</td>\n",
-       "      <td id=\"T_6c3ba_row4_col1\" class=\"data row4 col1\" >2019</td>\n",
-       "      <td id=\"T_6c3ba_row4_col2\" class=\"data row4 col2\" >2664549.000000</td>\n",
+       "      <th id=\"T_22a0d_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_22a0d_row4_col0\" class=\"data row4 col0\" >2019-05-14 00:00:00</td>\n",
+       "      <td id=\"T_22a0d_row4_col1\" class=\"data row4 col1\" >2019</td>\n",
+       "      <td id=\"T_22a0d_row4_col2\" class=\"data row4 col2\" >2664549.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_22a0d_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_22a0d_row5_col0\" class=\"data row5 col0\" >2019-05-13 00:00:00</td>\n",
+       "      <td id=\"T_22a0d_row5_col1\" class=\"data row5 col1\" >2019</td>\n",
+       "      <td id=\"T_22a0d_row5_col2\" class=\"data row5 col2\" >2611324.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1566bfe00>"
+       "<pandas.io.formats.style.Styler at 0x12ac74b00>"
       ]
      },
      "execution_count": 23,
@@ -2689,7 +2674,21 @@
    "source": [
     "from utils import highlight_wide_format\n",
     "\n",
-    "highlight_wide_format(tsa.head(), colors)"
+    "highlight_wide_format(tsa.head(2), colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "425ddfa0-fd95-4e44-b886-42c59fc4249b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "Let's work on making this transformation."
    ]
   },
   {
