--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -3000,12 +3000,12 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     },
     "tags": []
    },
    "source": [
-    "Now, we can work on reshaping it."
+    "Now, we can work on reshaping it into two columns the date and the traveler throughput from 2019 through 2021."
    ]
   },
   {
@@ -3019,7 +3019,7 @@
     "tags": []
    },
    "source": [
-    "Starting with long format data:"
+    "Starting with the long-format data below, we want to **melt** it into wide-format data so that we can look at the evolution of the throughput over time:"
    ]
   },
   {
@@ -3038,76 +3038,55 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_1188d_row0_col1, #T_1188d_row1_col1, #T_1188d_row2_col1, #T_1188d_row3_col1, #T_1188d_row4_col1 {\n",
+       "#T_23824_row0_col1, #T_23824_row1_col1 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_1188d_row0_col2, #T_1188d_row1_col2, #T_1188d_row2_col2, #T_1188d_row3_col2, #T_1188d_row4_col2 {\n",
+       "#T_23824_row0_col2, #T_23824_row1_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_1188d_row0_col3, #T_1188d_row1_col3, #T_1188d_row2_col3, #T_1188d_row3_col3, #T_1188d_row4_col3 {\n",
+       "#T_23824_row0_col3, #T_23824_row1_col3 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
-       "#T_1188d_level0_col1 {\n",
+       "#T_23824_level0_col1 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_1188d_level0_col2 {\n",
+       "#T_23824_level0_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_1188d_level0_col3 {\n",
+       "#T_23824_level0_col3 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_1188d\">\n",
+       "<table id=\"T_23824\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_1188d_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
-       "      <th id=\"T_1188d_level0_col1\" class=\"col_heading level0 col1\" >2021</th>\n",
-       "      <th id=\"T_1188d_level0_col2\" class=\"col_heading level0 col2\" >2020</th>\n",
-       "      <th id=\"T_1188d_level0_col3\" class=\"col_heading level0 col3\" >2019</th>\n",
+       "      <th id=\"T_23824_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
+       "      <th id=\"T_23824_level0_col1\" class=\"col_heading level0 col1\" >2021</th>\n",
+       "      <th id=\"T_23824_level0_col2\" class=\"col_heading level0 col2\" >2020</th>\n",
+       "      <th id=\"T_23824_level0_col3\" class=\"col_heading level0 col3\" >2019</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_1188d_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_1188d_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
-       "      <td id=\"T_1188d_row0_col1\" class=\"data row0 col1\" >1716561.000000</td>\n",
-       "      <td id=\"T_1188d_row0_col2\" class=\"data row0 col2\" >250467</td>\n",
-       "      <td id=\"T_1188d_row0_col3\" class=\"data row0 col3\" >2664549</td>\n",
+       "      <th id=\"T_23824_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_23824_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
+       "      <td id=\"T_23824_row0_col1\" class=\"data row0 col1\" >1716561.000000</td>\n",
+       "      <td id=\"T_23824_row0_col2\" class=\"data row0 col2\" >250467</td>\n",
+       "      <td id=\"T_23824_row0_col3\" class=\"data row0 col3\" >2664549</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_1188d_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_1188d_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
-       "      <td id=\"T_1188d_row1_col1\" class=\"data row1 col1\" >1743515.000000</td>\n",
-       "      <td id=\"T_1188d_row1_col2\" class=\"data row1 col2\" >234928</td>\n",
-       "      <td id=\"T_1188d_row1_col3\" class=\"data row1 col3\" >2611324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_1188d_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_1188d_row2_col0\" class=\"data row2 col0\" >2021-05-12 00:00:00</td>\n",
-       "      <td id=\"T_1188d_row2_col1\" class=\"data row2 col1\" >1424664.000000</td>\n",
-       "      <td id=\"T_1188d_row2_col2\" class=\"data row2 col2\" >176667</td>\n",
-       "      <td id=\"T_1188d_row2_col3\" class=\"data row2 col3\" >2343675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_1188d_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_1188d_row3_col0\" class=\"data row3 col0\" >2021-05-11 00:00:00</td>\n",
-       "      <td id=\"T_1188d_row3_col1\" class=\"data row3 col1\" >1315493.000000</td>\n",
-       "      <td id=\"T_1188d_row3_col2\" class=\"data row3 col2\" >163205</td>\n",
-       "      <td id=\"T_1188d_row3_col3\" class=\"data row3 col3\" >2191387</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_1188d_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_1188d_row4_col0\" class=\"data row4 col0\" >2021-05-10 00:00:00</td>\n",
-       "      <td id=\"T_1188d_row4_col1\" class=\"data row4 col1\" >1657722.000000</td>\n",
-       "      <td id=\"T_1188d_row4_col2\" class=\"data row4 col2\" >215645</td>\n",
-       "      <td id=\"T_1188d_row4_col3\" class=\"data row4 col3\" >2512315</td>\n",
+       "      <th id=\"T_23824_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_23824_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
+       "      <td id=\"T_23824_row1_col1\" class=\"data row1 col1\" >1743515.000000</td>\n",
+       "      <td id=\"T_23824_row1_col2\" class=\"data row1 col2\" >234928</td>\n",
+       "      <td id=\"T_23824_row1_col3\" class=\"data row1 col3\" >2611324</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1181f3590>"
+       "<pandas.io.formats.style.Styler at 0x11f6eb0e0>"
       ]
      },
      "execution_count": 22,
@@ -3119,7 +3098,7 @@
     "from utils import highlight_long_format\n",
     "\n",
     "colors = {'2021': 'pink', '2020': 'skyblue', '2019': 'lightgreen'}\n",
-    "highlight_long_format(tsa.head(), colors)"
+    "highlight_long_format(tsa.head(2), colors)"
    ]
   },
   {
@@ -3133,7 +3112,7 @@
     "tags": []
    },
    "source": [
-    "We want to transform it into wide format so that we can look at the evolution of the throughput over time:"
+    "Note that the two rows above contain the same data as the six rows below:"
    ]
   },
   {
@@ -3152,61 +3131,67 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_ae0e3_row0_col1, #T_ae0e3_row0_col2, #T_ae0e3_row3_col1, #T_ae0e3_row3_col2 {\n",
+       "#T_ef5a8_row0_col1, #T_ef5a8_row0_col2, #T_ef5a8_row1_col1, #T_ef5a8_row1_col2 {\n",
        "  background-color: pink;\n",
        "}\n",
-       "#T_ae0e3_row1_col1, #T_ae0e3_row1_col2, #T_ae0e3_row2_col1, #T_ae0e3_row2_col2 {\n",
+       "#T_ef5a8_row2_col1, #T_ef5a8_row2_col2, #T_ef5a8_row3_col1, #T_ef5a8_row3_col2 {\n",
        "  background-color: skyblue;\n",
        "}\n",
-       "#T_ae0e3_row4_col1, #T_ae0e3_row4_col2 {\n",
+       "#T_ef5a8_row4_col1, #T_ef5a8_row4_col2, #T_ef5a8_row5_col1, #T_ef5a8_row5_col2 {\n",
        "  background-color: lightgreen;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_ae0e3\">\n",
+       "<table id=\"T_ef5a8\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_ae0e3_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
-       "      <th id=\"T_ae0e3_level0_col1\" class=\"col_heading level0 col1\" >year</th>\n",
-       "      <th id=\"T_ae0e3_level0_col2\" class=\"col_heading level0 col2\" >travelers</th>\n",
+       "      <th id=\"T_ef5a8_level0_col0\" class=\"col_heading level0 col0\" >date</th>\n",
+       "      <th id=\"T_ef5a8_level0_col1\" class=\"col_heading level0 col1\" >year</th>\n",
+       "      <th id=\"T_ef5a8_level0_col2\" class=\"col_heading level0 col2\" >travelers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae0e3_level0_row0\" class=\"row_heading level0 row0\" >3</th>\n",
-       "      <td id=\"T_ae0e3_row0_col0\" class=\"data row0 col0\" >2021-05-11 00:00:00</td>\n",
-       "      <td id=\"T_ae0e3_row0_col1\" class=\"data row0 col1\" >2021</td>\n",
-       "      <td id=\"T_ae0e3_row0_col2\" class=\"data row0 col2\" >1315493.000000</td>\n",
+       "      <th id=\"T_ef5a8_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_ef5a8_row0_col0\" class=\"data row0 col0\" >2021-05-14 00:00:00</td>\n",
+       "      <td id=\"T_ef5a8_row0_col1\" class=\"data row0 col1\" >2021</td>\n",
+       "      <td id=\"T_ef5a8_row0_col2\" class=\"data row0 col2\" >1716561.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae0e3_level0_row1\" class=\"row_heading level0 row1\" >7</th>\n",
-       "      <td id=\"T_ae0e3_row1_col0\" class=\"data row1 col0\" >2020-05-12 00:00:00</td>\n",
-       "      <td id=\"T_ae0e3_row1_col1\" class=\"data row1 col1\" >2020</td>\n",
-       "      <td id=\"T_ae0e3_row1_col2\" class=\"data row1 col2\" >176667.000000</td>\n",
+       "      <th id=\"T_ef5a8_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_ef5a8_row1_col0\" class=\"data row1 col0\" >2021-05-13 00:00:00</td>\n",
+       "      <td id=\"T_ef5a8_row1_col1\" class=\"data row1 col1\" >2021</td>\n",
+       "      <td id=\"T_ef5a8_row1_col2\" class=\"data row1 col2\" >1743515.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae0e3_level0_row2\" class=\"row_heading level0 row2\" >6</th>\n",
-       "      <td id=\"T_ae0e3_row2_col0\" class=\"data row2 col0\" >2020-05-13 00:00:00</td>\n",
-       "      <td id=\"T_ae0e3_row2_col1\" class=\"data row2 col1\" >2020</td>\n",
-       "      <td id=\"T_ae0e3_row2_col2\" class=\"data row2 col2\" >234928.000000</td>\n",
+       "      <th id=\"T_ef5a8_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_ef5a8_row2_col0\" class=\"data row2 col0\" >2020-05-14 00:00:00</td>\n",
+       "      <td id=\"T_ef5a8_row2_col1\" class=\"data row2 col1\" >2020</td>\n",
+       "      <td id=\"T_ef5a8_row2_col2\" class=\"data row2 col2\" >250467.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae0e3_level0_row3\" class=\"row_heading level0 row3\" >2</th>\n",
-       "      <td id=\"T_ae0e3_row3_col0\" class=\"data row3 col0\" >2021-05-12 00:00:00</td>\n",
-       "      <td id=\"T_ae0e3_row3_col1\" class=\"data row3 col1\" >2021</td>\n",
-       "      <td id=\"T_ae0e3_row3_col2\" class=\"data row3 col2\" >1424664.000000</td>\n",
+       "      <th id=\"T_ef5a8_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_ef5a8_row3_col0\" class=\"data row3 col0\" >2020-05-13 00:00:00</td>\n",
+       "      <td id=\"T_ef5a8_row3_col1\" class=\"data row3 col1\" >2020</td>\n",
+       "      <td id=\"T_ef5a8_row3_col2\" class=\"data row3 col2\" >234928.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae0e3_level0_row4\" class=\"row_heading level0 row4\" >10</th>\n",
-       "      <td id=\"T_ae0e3_row4_col0\" class=\"data row4 col0\" >2019-05-14 00:00:00</td>\n",
-       "      <td id=\"T_ae0e3_row4_col1\" class=\"data row4 col1\" >2019</td>\n",
-       "      <td id=\"T_ae0e3_row4_col2\" class=\"data row4 col2\" >2664549.000000</td>\n",
+       "      <th id=\"T_ef5a8_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_ef5a8_row4_col0\" class=\"data row4 col0\" >2019-05-14 00:00:00</td>\n",
+       "      <td id=\"T_ef5a8_row4_col1\" class=\"data row4 col1\" >2019</td>\n",
+       "      <td id=\"T_ef5a8_row4_col2\" class=\"data row4 col2\" >2664549.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_ef5a8_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_ef5a8_row5_col0\" class=\"data row5 col0\" >2019-05-13 00:00:00</td>\n",
+       "      <td id=\"T_ef5a8_row5_col1\" class=\"data row5 col1\" >2019</td>\n",
+       "      <td id=\"T_ef5a8_row5_col2\" class=\"data row5 col2\" >2611324.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x128778770>"
+       "<pandas.io.formats.style.Styler at 0x11f4e29c0>"
       ]
      },
      "execution_count": 23,
@@ -3217,7 +3202,21 @@
    "source": [
     "from utils import highlight_wide_format\n",
     "\n",
-    "highlight_wide_format(tsa.head(), colors)"
+    "highlight_wide_format(tsa.head(2), colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f2d2044-65a1-422c-bff1-d2827ac9e24d",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "Let's work on making this transformation."
    ]
   },
   {
