--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -2477,7 +2477,7 @@
     "tags": []
    },
    "source": [
-    "Now, we can work on reshaping it into two columns the date and the traveler throughput from 2019 through 2021."
+    "Now, we can work on reshaping it into two columns: the date and the traveler throughput from 2019 through 2021."
    ]
   },
   {
