--- a/notebooks/0-check_your_env.ipynb
+++ b/notebooks/0-check_your_env.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -19,9 +19,9 @@
      "text": [
       "\u001b[42m[ OK ]\u001b[0m Python\n",
       "\u001b[42m[ OK ]\u001b[0m jupyterlab\n",
-      "\u001b[42m[ OK ]\u001b[0m matplotlib\n",
-      "\u001b[42m[ OK ]\u001b[0m numpy\n",
-      "\u001b[42m[ OK ]\u001b[0m pandas\n",
+      "\u001b[41m[FAIL]\u001b[0m matplotlib version 3.8.4 is required, but 3.9.1 installed.\n",
+      "\u001b[41m[FAIL]\u001b[0m numpy version 2.0.0 is required, but 1.26.4 installed.\n",
+      "\u001b[41m[FAIL]\u001b[0m pandas version 2.2.2 is required, but 2.1.4 installed.\n",
       "\u001b[42m[ OK ]\u001b[0m requests\n",
       "\u001b[42m[ OK ]\u001b[0m seaborn\n"
      ]
@@ -56,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
