--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c8c4e00d-8bbb-47ee-9c84-dba7b6c19636",
    "metadata": {
     "tags": []
@@ -173,7 +173,7 @@
        "4  01/01/1902 12:00:00 AM -33.16667  -64.95000   (-33.16667, -64.95)  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "e9481da8-a3b5-4f6e-b9fc-cdb049090dbe",
    "metadata": {
     "tags": []
@@ -225,13 +225,14 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "meteorites.name"
+    "meteorites.name\n",
+    "# print(meteorites.name)"
    ]
   },
   {
@@ -249,27 +250,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "2b8723c5-3e4d-4038-82c7-5c0e9651f01c",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['name', 'id', 'nametype', 'recclass', 'mass (g)', 'fall', 'year',\n",
-       "       'reclat', 'reclong', 'GeoLocation'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['name', 'id', 'nametype', 'recclass', 'mass (g)', 'fall', 'year',\n",
+      "       'reclat', 'reclong', 'GeoLocation'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "source": [
-    "meteorites.columns"
+    "meteorites.columns\n",
+    "print(meteorites.columns)"
    ]
   },
   {
@@ -2661,7 +2660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
