--- a/slides/5-outro.ipynb
+++ b/slides/5-outro.ipynb
@@ -38,11 +38,17 @@
    "source": [
     "# Thank you!\n",
     "\n",
-    "*I hope you enjoyed the session. You can follow my work on the following platforms:*\n",
+    "*I hope you enjoyed the session. You can follow my work on these platforms:*\n",
     "\n",
     "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
     "    <div style=\"text-align: center; flex-basis: auto; flex-shrink: 2;\">\n",
-    "        <img class=\"qr-code\" width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\">\n",
+    "        <img\n",
+    "          width=\"20%\"\n",
+    "          alt=\"Please visit https://stefaniemolin.com/feedback to provide your feedback on this session.\"\n",
+    "          title=\"QR code to submit feedback (leads to https://stefaniemolin.com/feedback)\"\n",
+    "          class=\"qr-code\"\n",
+    "          src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\"\n",
+    "        />\n",
     "    </div>\n",
     "\n",
     "  <div style=\"flex-basis: 45em; flex-grow: 2; font-size: 80%;\">\n",
