Replace bio abbreviations; make value_counts() examples consistent

--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -51,8 +51,8 @@
     "- 👩‍💻 Software engineer at Bloomberg in NYC\n",
     "- 🚀 Core developer of [numpydoc](https://github.com/numpy/numpydoc)\n",
     "- ✍️ Author of [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (currently in its second edition; translated into Korean and Simplified Chinese)\n",
-    "- 🎓 BS in operations research from Columbia University\n",
-    "- 🎓 MS in computer science (ML specialization) from Georgia Tech"
+    "- 🎓 Bachelor's in operations research from Columbia University\n",
+    "- 🎓 Master's in computer science (ML specialization) from Georgia Tech"
    ]
   },
   {
