--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -2654,7 +2654,7 @@
     }
    ],
    "source": [
-    "df.value_counts(subset=['nametype', 'fall'], normalize=True)"
+    "meteorites.value_counts(subset=['nametype', 'fall'], normalize=True)"
    ]
   },
   {
