--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -2269,7 +2269,7 @@
     }
    ],
    "source": [
-    "df.value_counts(subset=['nametype', 'fall'], normalize=True)"
+    "meteorites.value_counts(subset=['nametype', 'fall'], normalize=True)"
    ]
   },
   {
