Add link to feedback form on around QR code

--- a/slides/5-outro.ipynb
+++ b/slides/5-outro.ipynb
@@ -42,13 +42,15 @@
     "\n",
     "<div style=\"display: flex; justify-content: space-between; align-items: center;\">\n",
     "    <div style=\"text-align: center; flex-basis: auto; flex-shrink: 2;\">\n",
-    "        <img\n",
-    "          width=\"20%\"\n",
-    "          alt=\"Please visit https://stefaniemolin.com/feedback to provide your feedback on this session.\"\n",
-    "          title=\"QR code to submit feedback (leads to https://stefaniemolin.com/feedback)\"\n",
-    "          class=\"qr-code\"\n",
-    "          src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\"\n",
-    "        />\n",
+    "        <a href=\"https://stefaniemolin.com/feedback\" target=\"_blank\">\n",
+    "            <img\n",
+    "              width=\"20%\"\n",
+    "              alt=\"Please visit https://stefaniemolin.com/feedback to provide your feedback on this session.\"\n",
+    "              title=\"QR code to submit feedback (leads to https://stefaniemolin.com/feedback)\"\n",
+    "              class=\"qr-code\"\n",
+    "              src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\"\n",
+    "            />\n",
+    "          </a>\n",
     "    </div>\n",
     "\n",
     "  <div style=\"flex-basis: 45em; flex-grow: 2; font-size: 80%;\">\n",
